# crime-detection-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/controllers/: user_controller.py
app/api/routers/: __init__.py  auth.py  notifications.py  shifts.py  violence_detection.py
app/api/services/: auth_service.py  notification_service.py  shift_service.py  user_service.py  violence_detection_service.py
app/constants/: messages.py  user_roles.py
app/core/: config.py  database.py  exceptions.py  init_db.py
app/middlewares/: authenticate.py  success_response.py
app/models/: notification.py  shift.py  user.py
app/schemas/: notification.py  response.py  shift.py  user.py
app/utils/: helpers.py  pagination.py  setup_db.py
migrations/: env.py
